SF-1557 Fix share dialog menus appearing behind dialog (#1342)
* This was caused by an interaction between Angular Material and Angular
MDC. The mix of a MDC dialog and a Material mat-select within it caused
the menu to appear behind the dialog. This problem only manifests itself
if a Material dialog was opened prior to this dialog being opened.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-dialog.component.scss
@@ -1,6 +1,3 @@
-mdc-dialog-container {
-  width: 100%;
-  > mdc-dialog-surface {
-    width: 100%;
-  }
+.mat-dialog-content {
+  width: 30em;
 }
